# agentic-preview

./: .env  .gitignore  Dockerfile  README.md  flyio-install.sh  init.sh  install-2.sh  install.sh  main.py  null--aider_projects.db  test.txt  update_db.py
agentic_editor/: README.md  aider_projects.db  main copy 2.py  main copy.py  main.py  projects.db  pyproject.toml  requirements.txt  test.txt
agentic_editor/docs/: README.md  architecture.md  configure.md  install.md  introduction.md  usage.md
agentic_editor/my_repo/: Dockerfile  readme.md  setup.py
agentic_editor/projects/cleanup_test/: main.py
agentic_editor/projects/cost-test_test/: api_gateway.py  auth_service.py  main.py  microservice_example.py
agentic_editor/projects/sonnet_test/: Dockerfile
agentic_editor/projects/sqlalchemy_test/: Dockerfile  requirements.txt
agentic_editor/projects/sqlite1_test/: Dockerfile
agentic_editor/projects/stream1_test/: Dockerfile  main.py
agentic_editor/projects/stream2_test/: Dockerfile
agentic_editor/ui/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agentic_editor/ui/src/: App.tsx  index.css
agentic_editor/ui/src/api/: api.ts
agentic_editor/ui/src/components/: Header.tsx  ProjectDetails.tsx  ProjectList.tsx  SettingsDialog.tsx
agentic_platform/: README.md  aider_projects.db  install-fly.sh  main.py  pyproject.toml  requirements.txt
agentic_platform/agentic_platform/: crud.py  database.py  main.py  models.py
agentic_platform/agentic_platform/api/: aider.py  api_router.py  architect.py  cost_summary.py  deploy.py  editor.py  projects.py  user.py  users.py
agentic_platform/agentic_platform/api/deploy/: __init__.py  endpoints.py  models.py  services.py  utils.py
agentic_platform/agentic_platform/utils/: __init__.py  json_utils.py
agentic_platform/preview/: main.py
agentic_platform/projects/sonnet_test/: Dockerfile  main.py  requirements.txt
agentic_platform/templates/: application.md  architect.md  bug_fix.md  code_management.md  code_review.md  framework.md  language.md
agentic_preview/: README.md  main copy.py  main.py  pyproject.toml  start.sh
agentic_preview/agentic_preview/: __init__.py  models.py
agentic_preview/agentic_preview/routes/: __init__.py  deploy.py  logs.py  status.py
doc/: README.md  agentic_editor.md  agentic_platform.md  agentic_preview.md  api.md  api_best_practices.md  configuration_files.md  repository_overview.md  test_projects.md
ui/: README.md  index.html  package-lock.json  vite.config.js
ui/src/: main.jsx  nav-items.jsx
ui/src/components/: Header.jsx
ui/src/pages/: Index.jsx
