[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
aider-chat = "^0.59.1"
sqlalchemy = "^1.4.0"
fastapi = "^0.68.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
